new testcase added

--- a/test-output/old/Suite/Testcase3.properties
+++ b/test-output/old/Suite/Testcase3.properties
@@ -1,1 +1,1 @@
-[SuiteResult context=Testcasse2][SuiteResult context=Testcase3][SuiteResult context=Testase1]
+[SuiteResult context=Testase1][SuiteResult context=Testcasse2][SuiteResult context=Testcase3]
